Cleaned up new (temp) version using partition array. Next step - optimizations, moving to parallel version.

--- a/CPP/Makefile
+++ b/CPP/Makefile
@@ -27,7 +27,7 @@ run:
 
 
 # Compare two versions
-COMMAND = -d ../TestData/documents --auto --noresults --noop
+COMMAND = -d ../TestData/documents --auto --noresults
 comp:
 	./spkmeans $(COMMAND); ./spkmeans2 $(COMMAND)
 
