Set up Boost and Galois includes in Galois version.

--- a/Galois/Makefile
+++ b/Galois/Makefile
@@ -1,4 +1,4 @@
-# Makefile for Spherical K-Means code
+# Makefile for Galois Spherical K-Means code
 
 
 # Galois path (needs to be installed and specified here)
@@ -8,20 +8,19 @@ GALOIS_PATH = ./../../../Galois-2.2.1
 # specify flags and compiler variables
 EXE = spkmeans
 COMPILER = /usr/bin/g++
-FLAGS = -DNDEBUG -g -O3 -ffast-math -fopenmp -std=c++0x
+FLAGS = -DNDEBUG -g -O3 -ffast-math -std=c++0x
 SRC_DIR = src
 OBJ_DIR = obj
 
 
 # specify source files
-GALOIS_SRC_FILES = spkmeans_galois.cpp
-GALOIS_SRC = $(addprefix $(SRC_DIR)/, $(GALOIS_SRC_FILES))
+SRC_FILES = spkmeans_galois.cpp
+SRC = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 
 
 # specify libraries and include sources
-GALOIS_INCLUDES = -I$(GALOIS_PATH)/build/release/include -I$(GALOIS_PATH)/include
-GALOIS_LINKS = -L$(GALOIS_PATH)/build/release/src -lgalois
-LINKS = -pthread -ldl
+INCLUDES = -I$(GALOIS_PATH)/build/release/include -I$(GALOIS_PATH)/include
+LINKS = -L$(GALOIS_PATH)/build/release/src -lgalois -pthread -ldl
 
 
 ################################################################################
@@ -31,7 +30,7 @@ LINKS = -pthread -ldl
 # compile everything
 all:
 	@echo "\nBuilding executable:"
-	$(COMPILER) $(FLAGS) $(GALOIS_INCLUDES) $(GALOIS_SRC) -o $(EXE) $(GALOIS_LINKS) $(LINKS)
+	$(COMPILER) $(FLAGS) $(INCLUDES) $(SRC) -o $(EXE) $(LINKS)
 	@echo "\nCompilation complete: success!\n"
 
 
