--- a/Galois/Makefile
+++ b/Galois/Makefile
@@ -47,4 +47,4 @@ clean:
 ################################################################################
 
 run:
-	./spkmeans
+	./spkmeans ../TestData/mat.gr 2 2
